<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.data.MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:background="#db4a13"
            android:gravity="center"
            android:onClick="add"
            android:text="@string/button_add" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:background="#db4a13"
            android:gravity="center"
            android:onClick="fetch"
            android:text="@string/button_fetch" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <TextView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:text="@string/user_id"
            android:textColor="#919191"
            android:textSize="20sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/user_name"
            android:textColor="#919191"
            android:textSize="20sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/user_email"
            android:textColor="#919191"
            android:textSize="20sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>